# GLP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.html  README.md  cmake_install.cmake  kernel.cuh  main.cu  myutil.h
header/: graph.h  kernel.cuh  test_result.h
method/: buffer.cuh  countmin.cuh  frequent.cuh  hashtable.cuh
prop/: Base1prop.cuh  Base3prop.cuh  CMLprop.cuh  FAprop.cuh  HTprop.cuh  Mixprop (original).cuh  Mixprop(global_ht).cuh  Mixprop(naive).cuh  Mixprop(sort ).cuh  Mixprop.cuh  Mixprop.cuh(bit map)  Mlprop.cuh  MultiGprop.cuh  MultiLprop.cuh  MultiOptLprop.cuh  OTMprop.cuh  PushLprop.cuh  SLPAprop.cuh  SSprop.cuh  Test1prop.cuh  Test2prop.cuh  Test3prop.cuh  UserdefinedLprop.cuh  Votprop.cuh  classicLprop.cuh  layeredLprop.cuh  seedLprop.cuh
tools/: 1.txt  CPU.py  bin2csv  bin2csv.cpp  bin2edgelist  bin2txt  bin2txt.cpp  buildgraph.cpp  convert.sh  convert_graph500  convert_graph500.cpp  convert_tsv  convert_tsv.cpp  direct_edgelist2bin  direct_edgelist2bin.cpp  edgelist2bin  edgelist2bin.cpp  findComponents  findComponents.cpp  generateGraph.sh  generateSeeds  generateSeeds.cpp  graphgenerator.7z  makefigureExA.sh  makefigureExAplus.sh  makefigureExB.sh  makefigureExBplus.sh  makefigureExC.sh  makefigureExC_total.sh  makefigureExD.sh  makefigureExE.sh  makefigureExF.sh  makefigureExG.sh  makefigureExOpt.sh  makefigureExbig.sh  makefigureExlayered.sh  makefigureExslpa.sh  makefigureSHT.sh  makefigureTest.sh  mergegraph  (+6 more)
tutorial/: Base2prop.cuh  Base4prop.cuh  Base5prop.cuh  BasicLprop.cuh  CMprop.cuh  CPUlp.cuh  Dynprop.cuh  (+8 more)
(+28 files in other folders)
